[project]
name = "langgraph-agent-handson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.7",
    "langchain-teddynote>=0.3.42",
    "langgraph-supervisor>=0.0.4",
    "langgraph-swarm>=0.0.3",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "pdfplumber>=0.11.5",
    "python-dotenv>=1.0.1",
    "trustcall>=0.0.37",
]
